--- a/game-02/package.json
+++ b/game-02/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Gilded Rose kata in TypeScript",
   "scripts": {
-    "compile": "tsc"
+    "compile": "tsc",
+    "test": "mocha -r ts-node/register 'test/**/*.ts'"
   },
   "license": "MIT",
   "private": true,
